--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color">
+    tools:context=".LoginActivity">
 
     <TextView
         android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="156dp"
-        android:text="Registro de Usuario"
-        android:textColor="@color/edittext_background_tint"
+        android:text="Iniciar sesión"
+        android:textColor="@color/text_color"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,11 +21,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/etNombre"
+        android:id="@+id/etMail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Nombre"
-        android:textColor="@color/edittext_background_tint"
+        android:hint="Email"
+        android:textColor="@color/text_color"
         android:backgroundTint="@color/edittext_background_tint"
         android:padding="16dp"
         android:textSize="18sp"
@@ -37,28 +37,11 @@
         android:layout_marginEnd="32dp"/>
 
     <EditText
-        android:id="@+id/etMail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/edittext_background_tint"
-        android:hint="Email"
-        android:padding="16dp"
-        android:textColor="@color/edittext_background_tint"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etNombre" />
-
-    <EditText
         android:id="@+id/etClave"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Contraseña"
-        android:textColor="@color/edittext_background_tint"
+        android:textColor="@color/text_color"
         android:backgroundTint="@color/edittext_background_tint"
         android:padding="16dp"
         android:textSize="18sp"
@@ -70,17 +53,17 @@
         android:layout_marginEnd="32dp"/>
 
     <Button
-        android:id="@+id/btnRegistrar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Registrar"
-        android:textColor="@color/text_color"
+        android:id="@+id/btnIniciarSesion"
+        android:layout_width="335dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="32dp"
         android:background="@color/button_background"
+        android:text="Comenzar"
+        android:textColor="@color/text_color"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/etClave"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.7"
-        android:layout_marginTop="32dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etClave"
+        app:layout_constraintWidth_percent="0.7" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
